# MMDocParser

./: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  __init__.py  compose.yaml  config.py  main.py  mineru.json  pyproject.toml  run.py  test_s3_auth.py  worker.py
.github/workflows/: validate.yaml
.woodpecker/: .validate.yaml  pre-commit.yml
enhancers/: __init__.py  base_models.py  enhancer_registry.py  information_enhancer.py
parsers/: __init__.py  base_models.py  document_parser.py  docx_parser.py  excel_parser.py  parser_registry.py  pdf_parser.py
proto/common/v1/: s3.proto
proto/parse/v1/: pdf_parser.proto
src/message/common/v1/: s3_pb2.py  s3_pb2_grpc.py
src/message/parse/v1/: pdf_parser_pb2.py  pdf_parser_pb2_grpc.py
storage/: redis_client.py  s3_client.py
tests/: test_async_parsers.py  test_doc_parsing.py  test_docx_parser.py  test_excel_parser.py  test_integration.py  test_pdf_parser.py  test_pdf_parser_advanced.py  test_redis_client.py  test_s3_client.py  utils.py
utils/: validators.py
