[project]
name = "mmdocparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[dependency-groups]
all-dev = [
    {include-group = "dev"},
    {include-group = "lint"},
    {include-group = "security"},
    {include-group = "typing"}
]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
lint = [
    "bandit>=1.8.6",
    "ruff>=0.12.7",
]
security = [
    "detect-secrets>=1.5.0",
]
typing = [
    "mypy>=1.17.1",
]

[tool.bandit]
exclude_dirs = [".venv", ".git", ".mypy_cache"]
skips = ["B101", "B601"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
